--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     />
     <!-- My own stylesheet -->
     <link href="style.css" rel="stylesheet" />
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/202ac9e387b85843a74eaa2a3/1ea34f0f592691f7ccfa798d3.js");</script>
   </head>
   <body>
     <div class="container d-flex align-items-center h-100">
