--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <header class="text-center col-12">
           <h1 class="text-uppercase">
-            <strong>The biggest start-up event<br>of the year!</strong>
+            <strong>The biggest start-up event of the year!</strong>
           </h1>
         </header>
         <div class="buffer col-12"></div>
